# BBM

./: README.md
BBM2018/13_22/: 13_22.sdf  13_22.sln
BBM2018/13_22/13_22/: 13_22.vcxproj  test1.c
BBM2018/13_22/13_22/Debug/: 13_22.lastbuildstate  13_22_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
BBM2018/13_22/Debug/: 13_22.ilk
BBM2018/13_22/ipch/13_22-58a7ee14/: 13_22-6c0372f3.ipch
BBM2018/BBM01/: BBM01.sln
BBM2018/BBM01/BBM01/: BBM01.cpp  BBM01.vcxproj  BBM01.vcxproj.filters
BBM2018/BBM01/BBM01/Debug/: BBM01.lastbuildstate  BBM01_manifest.rc  (+12 more)
BBM2018/BBM01/Debug/: BBM01.ilk
BBM2018/BBM02/: BBM02.sln
BBM2018/BBM02/BBM02/: BBM02.vcxproj  BBM02.vcxproj.filters  ex02.cpp
BBM2018/BBM02/Debug/: BBM02.ilk
BBM2018/BBM03/: BBM03.sln
BBM2018/BBM03/BBM03/: BBM03.vcxproj  BBM03.vcxproj.filters  ex03.cpp
BBM2018/BBM03/Debug/: BBM03.ilk
BBM2018/BBM04/: BBM04.sln
BBM2018/BBM04/BBM04/: BBM04.vcxproj  BBM04.vcxproj.filters  ex04.cpp
BBM2018/BBM04/Debug/: BBM04.ilk
BBM2018/BBM05/: BBM05.sln
BBM2018/BBM05/BBM05/: BBM05.vcxproj  BBM05.vcxproj.filters  ex05.cpp
BBM2018/BBM05/Debug/: BBM05.ilk
BBM2018/BBM06/: BBM06.sln
BBM2018/BBM06/BBM06/: BBM06.vcxproj  BBM06.vcxproj.filters  ex06.cpp  参数解释.txt
BBM2018/BBM06/Debug/: BBM06.ilk
BBM2018/BBM07/: BBM07.sln
BBM2018/BBM07/BBM07/: BBM07.vcxproj  BBM07.vcxproj.filters  ex07.cpp
BBM2018/exercise08/: CMakeLists.txt  ex08.cpp
(+111 files in other folders)
